Fix missing dotted line on mobile project page

--- a/src/main/resources/static/sass/imports/project.scss
+++ b/src/main/resources/static/sass/imports/project.scss
@@ -63,7 +63,7 @@
 
       .sub-header-dotted-line {
         height: 5px;
-        margin: 0 auto 26px;
+        margin-bottom: 26px;
         background-image: url("../svg/dot-light.svg");
       }
 
